--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -11,15 +11,18 @@ jobs:
     - uses: actions/setup-node@v1
       with: 
         node-version: 14.7.0
-      - run: chmod 777 ./base.sh
-      - run: sed -i "s/PROJECT/kpmgboapi/g" ./base.sh
-      - run: sed -i "s/%ENV/development/g" ./base.sh
-      - run: chmod 777 ./base.sh
-      - run: sed -i "s/PROJECT/kpmgboapi/g" ./package.json
-      - run: sed -i "s/.env.production/.env.development/g" ./package.json
-      - run: sed -i "s/NODE_ENV=production tsc/NODE_ENV=development tsc/g" ./package.json
-      - run: sed -i "s/NODE_ENV=production babel/NODE_ENV=development babel/g" ./package.json
-      - run: yarn super:build
+        cache: 'npm'
+    - run: npm install
+    - run: chmod 777 ./base.sh
+    - run: sed -i "s/PROJECT/kpmgboapi/g" ./base.sh
+    - run: sed -i "s/%ENV/development/g" ./base.sh
+    - run: chmod 777 ./base.sh
+    - run: sed -i "s/PROJECT/kpmgboapi/g" ./package.json
+    - run: sed -i "s/.env.production/.env.development/g" ./package.json
+    - run: sed -i "s/NODE_ENV=production tsc/NODE_ENV=development tsc/g" ./package.json
+    - run: sed -i "s/NODE_ENV=production babel/NODE_ENV=development babel/g" ./package.json
+    - run: yarn super:build
+
     - name: deploy file to server
     - uses: wlixcc/SFTP-Deploy-Action@v1.0
       with:
