--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -9,7 +9,8 @@ jobs:
     steps: 
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
-      with:
+      with: 
         node-version: 14.7.0
         cache: 'npm'
     - run: npm install
+    - run: chmod 777 ./base.sh
