--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -22,3 +22,6 @@ jobs:
     - run: sed -i "s/NODE_ENV=production tsc/NODE_ENV=development tsc/g" ./package.json
     - run: sed -i "s/NODE_ENV=production babel/NODE_ENV=development babel/g" ./package.json
     - run: yarn super:build
+    
+    name: deploy file to server
+    - uses: wlixcc/SFTP-Deploy-Action@v1.0
