--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -22,6 +22,4 @@ jobs:
     - run: sed -i "s/NODE_ENV=production tsc/NODE_ENV=development tsc/g" ./package.json
     - run: sed -i "s/NODE_ENV=production babel/NODE_ENV=development babel/g" ./package.json
     - run: yarn super:build
-    
-      uses: wlixcc/SFTP-Deploy-Action@v1.0
-      
+    - uses: wlixcc/SFTP-Deploy-Action@v1.0
