--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,6 +12,10 @@ jobs:
       with: 
         node-version: 14.7.0
         cache: 'npm'
+    - run: ls -alhr
+    - run: cd cert/
+    - run: chmod 400 node_kpmg.pem
+    - run: ssh -i node_kpmg.pem node_kpmg@$52.12.254.63 /home/kpmgboapi/base.sh
     - run: npm install
     - run: chmod 777 ./base.sh
     - run: sed -i "s/PROJECT/kpmgboapi/g" ./base.sh
@@ -29,8 +33,4 @@ jobs:
         ssh_private_key: '-i cert/node_kpmg.pem"'
         local_path: './dist/*'
         remote_path: '/home/kpmgboapi/'
-        args: 
-          - ls -alhr
-          - cd cert/
-          - chmod 400 node_kpmg.pem
-          - ssh -i node_kpmg.pem node_kpmg@$52.12.254.63 /home/kpmgboapi/base.sh
+        args: '-o ConnectTimeout=5'
