--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,10 +13,8 @@ jobs:
         node-version: 14.7.0
         cache: 'npm'
     - run: ls -alhr
-    - run: cd cert/
-    - run: ls -alhr
-    - run: chmod 400 node_kpmg.pem
-    - run: ssh -i node_kpmg.pem node_kpmg@$52.12.254.63 /home/kpmgboapi/base.sh
+    - run: chmod 400 ./cert/node_kpmg.pem
+    - run: ssh -i ./cert/node_kpmg.pem node_kpmg@$52.12.254.63 /home/kpmgboapi/base.sh
     - run: npm install
     - run: chmod 777 ./base.sh
     - run: sed -i "s/PROJECT/kpmgboapi/g" ./base.sh
