--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         username: 'root'
         server: '52.12.254.63'
-        ssh_private_key: '-i cert/node_kpmg.pem"'
+        ssh_private_key: './cert/node_kpmg.pem'
         local_path: './dist/*'
         remote_path: '/home/kpmgboapi/'
         args: '-o ConnectTimeout=5'
