--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: wlixcc/SFTP-Deploy-Action@v1.0
       with:
         username: 'node_kpmg'
-        server: '52.12.254.63'
+        server: 52.12.254.63
         ssh_private_key: './cert/node_kpmg.pem'
         local_path: './dist/*'
         remote_path: './home/kpmgboapi/'
