--- a/environment/.env.production
+++ b/environment/.env.production
@@ -4,50 +4,40 @@
 
 ENV=production
 VERSION=1
-PROJECT=Tugo
-SHORT_NAME=tgr
+PROJECT=boapi
+SHORT_NAME=kg
 LANGUAGE=es
 
 #HOST DATA:
-HOST=apiriders.tugoapp.com
-PORT=50008
-BASEURL = http://apiriders.tugoapp.com/
-SSLON =TRUE
+PORT=5001 # port production
 
 ## DATABASE DATA
-
 # PROD
-PROD_DB_USERNAME=tugolocal
-PROD_DB_PASSWORD=kfgsj02ytvdg
-PROD_DB_NAME=tugo
-PROD_DB_HOSTNAME=localhost
+# production data
+PROD_DB_USERNAME=root
+PROD_DB_PASSWORD=GSVx@dminPa$$
+PROD_DB_NAME=onekey
+PROD_DB_HOSTNAME=cobogsrv29.co.kworld.kpmg.com
 PROD_DB_SYSTEM=mysql
 PROD_DB_PORT=3306
 
 # Sentry - Logger
-SENTRY_CONSOLE=true
-SENTRY_DSN=https://e1486e89d37d40458501fe85048de38e@o433386.ingest.sentry.io/5388364
+SENTRY_INSTALL=false
+SENTRY_CONSOLE=false
+SENTRY_DSN=https://bc10b97f31ce4537bc800cda4919a4eb@o433479.ingest.sentry.io/5388739
 
 # Emails
-GMAIL_SERVICE_NAME=gmail
-GMAIL_SERVICE_HOST='smtp-relay.gmail.com'
-GMAIL_SERVICE_SECURE=true
-GMAIL_SERVICE_PORT=465
-GMAIL_USER_NAME=soportetugoapp@gmail.com
-GMAIL_USER_PASSWORD=Pedidos2021
 
-#S3
-IMAGES_API=https://files.tugoapp.com/
-IMAGES_BUCKET=https://tugoapp.s3-us-west-2.amazonaws.com
-IMAGES_API_BRANDS=/brands/
-IMAGES_API_CATEGORIES=/categories/
-IMAGES_API_SUBCATEGORIES=/subcategories/
-IMAGES_API_USERS=/users/
-IMAGES_API_PRODUCTS=/products/
-IMAGES_API_RIDERS=/riders/
-IMAGES_API_SYSTEM=/system/
-IMAGES_API_SHOPPERS=/shoppers/
-# SOCKET.IO
-SOCKET_URL=http://realtime.tugoapp.com/
-# PUSH 
-PUSH_API=https://push.tugoapp.com/
+# emails production data
+GMAIL_SERVICE_NAME=gmail
+GMAIL_SERVICE_HOST='gomxema2.go.kworld.kpmg.com'
+GMAIL_SERVICE_SECURE=true
+GMAIL_SERVICE_PORT=25
+GMAIL_USER_NAME=onekey@kpmg.com
+GMAIL_USER_PASSWORD=
+
+NODE_TLS_REJECT_UNAUTHORIZED='0'
+
+#images
+#IMG_URL='http://kpmgboapi.inkubo.co:50002/'
+IMG_URL='https://boapionekey.co.kworld.kpmg.com:5001/'
